# azure-workflow

./: .dockerignore  azure-pipelines.yaml  docker-compose.yaml  pyproject.toml
azure_workflow/: app.py
dockerfiles/: dev.Dockerfile  prod.Dockerfile
scripts/: start.sh
tests/: test_something.py
