[tool.poetry]
name = "azure-workflow"
version = "0.1.0"
description = "Simple flask application to test out azure devops workflow."
authors = ["Alexandre Xavier"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
